--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ firebase-debug.*.log*
 # Firebase cache
 .firebase/
 
+# storage
+storage/
+
 # Firebase config
 
 # Uncomment this if you'd like others to create their own Firebase project.
